pages/index.css
.page {
  font-family: "Inter", Arial, sans-serif;
  min-width: 1100px;
  max-width: 1600px;
  margin: 0 auto;
  font-size: 16px;
  line-height: 20px;
  font-style: normal;
  font-weight: 400;
  background-color: #ffffff;
}
.header {
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  background-image: url("../images/background_header.svg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  height: 100vh;
}
.background_header {
  position: absolute;
  background-repeat: no-repeat;
}

.span-accent {
  color: #2f80ed;
  font-family: "Noto Serif";
  font-style: italic;
  font-weight: normal;
  font-size: 58px;
  line-height: 72px;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: 30px;
  padding-left: 30px;
  padding-right: 80px;
}

.nav__logo {
  height: 39px;
  width: 105px;
}

.nav__links {
  display: flex;
  list-style-type: none;
  padding: 0;
  font-family: "Inter";
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
  gap: 20px;
}

.nav__link {
  color: #000000;
  text-decoration: none;
  font-weight: bold;
  padding-top: 8px;
}

.header__title {
  display: flex;
  flex-direction: column;
  max-width: 709px;
  font-size: 62px;
  line-height: 76px;
  margin-top: 183px;
  margin-bottom: 28px;
  margin-left: 80px;
  font-weight: 500;
  font-family: "Noto Serif";
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  line-height: 30px;
}

.header__description {
  max-width: 683px;
  margin-left: 80px;
  font-family: "Noto Serif";
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  line-height: 30px;
}

.header__image {
  position: absolute;
  max-width: 646px;
  max-height: 568px;
  top: 124px;
  right: 5px;
}

.header__footer {
  margin-top: auto;
  width: 100%;
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
  box-sizing: border-box;
}

.header__link {
  color: #2f80ed;
  text-decoration: none;
}

.header__paragraph {
  left: 80px;
  bottom: 40px;
  list-style-type: none;
  font-family: "Inter";
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
  color: #838383;
}

.recipes {
  background-color: #0a2850;
  color: #ffffff;
  padding-top: 100px;
  padding-bottom: 215px;
}
.recipes__title {
  max-width: 580px;
  margin: 0;
  margin-left: 80px;
  font-family: "Inter";
  font-style: normal;
  font-weight: 500;
  font-size: 44px;
  line-height: 52px;
}
.recipes__subtitle {
  max-width: 438px;
  margin-top: 24px;
  margin-left: 80px;
  bottom: 80px;
  font-family: "Noto Serif";
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  line-height: 30px;
}
.recipes__videos {
  display: flex;
  gap: 40px;
  justify-content: center;
  font-family: "Inter";
  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  line-height: 30px;
  margin-top: 80px;
}
.recipes__videos-description {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.recipes__iframe {
  border: 0;
}
.reservation {
  padding: 100px;
  padding-bottom: 120px;
  background-color: #d9e7ff;
  background-image: url("../images/background_reservation.svg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;

  .reservation-title {
    font-family: "Inter";
    font-style: normal;
    font-weight: 500;
    font-size: 44px;
    line-height: 52px;
  }
}

.reservation__form {
  justify-content: center;
}
.reserve {
  top: 100px;
  font-family: "Inter";
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
  background-color: #2f80ed;
}

.reservation__label {
  font-family: "Inter";
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
  max-width: 385px;
  gap: 8px;
  top: 80px;
}
button::content {
  font-family: "Inter";
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
  max-width: 385px;
  max-height: 60px;
}

.input[type="text"] {
  max-width: 385px;
  max-height: 60px;
  bottom: 32px;
}

.input[type="number"] {
  max-width: 385px;
  max-height: 60px;
  bottom: 32px;
}
.input[type="email"] {
  max-width: 385px;
  max-height: 60px;
  bottom: 32px;
}
.input[type="datetime-local"] {
  max-width: 385px;
  max-height: 60px;
  bottom: 32px;
}
.input[type="checkbox"] {
  position: absolute;
  width: 20px;
  height: 20px;
}

